Sun Jan 14 17:07:33 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/conf.c, server/upsd.ch: "unhardcode" default PORT, simplify
   setting the default listening address

Sat Jan 13 20:12:16 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.ch: 
   - hostname can now be specified as a fully.qualified.domain.name or an
     [address literal]
   - cleaned up IPv6 code
 * m4/nut_check_ipv6.m4:
   - removed check for AI_ADDRCONFIG, since it is no longer used (for
     portability reasons, wasn't really needed anyway)
 * server/upsd.ch, server/conf.c, server/stype.h:
   - listen on multiple TCP sockets (to be configured in upsd.conf)
   - removed -i and -p options which are obsoleted by the above
   - listening address can be specified as a fully.qualified.domain.name
     or an [address literal]
   - cleaned up IPv6 code
 * conf/upsd.conf.sample:
   - added new LISTEN parameter

Wed Jan 10 15:42:20 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: set a default for the listenaddress if we're using
   new IPv6 code so that an IPv4 listening socket bound to 0.0.0.0 is
   created (which used to be the case previously, if nothing was specified)

Tue Jan  9 08:11:13 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - libhid.c: HIDDumpTree() also prints the data ReportID, Offset and Size
   in the else case. Add a caution message when modifying the output
   since it can break path-to-subdriver.sh
 - scripts/subdriver/path-to-subdriver.sh: minor update to the "Do not
   forget to:" section

Tue Jan  9 01:22:23 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - drivers/tripplite_usb.c: starting to merge in changes for outlet control
   and Unit ID.

Mon Jan  8 19:58:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/access.ch: merged some code between IPV4 and IPV6 for similar
   functions; use network byte order for network addresses (essentially
   'struct sockaddr_*' types) and host byte order for all others
